--- a/index.ipynb
+++ b/index.ipynb
@@ -188,13 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-1b6961726626>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-1b6961726626>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    favorite_destination():\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
-    "    \n",
+    "favorite_destination():  \n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
