--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized_countries = [travel_destinations.title]\n",
+    "    capitalized_countries = []\n",
+    "    for destination in travel_destinations:\n",
+    "        \n",
     "    return capitalized_countries"
    ]
   },
